# c-cpp-playground

./: CMakeLists.txt
include/private/: c_cpp_playground_private.h  common_defs.h
include/public/: c_cpp_playground.h  common_defs.h
lib/: CMakeLists.txt
lib/private/: c_cpp_playground_private.c
lib/public/: c_cpp_playground.c
package_management/vcpkg/: vcpkg.json
