cmake_minimum_required(VERSION 3.20.0)
project("c-cpp-playground")

if(DEFINED C_CPP_PLAYGROUND_TOOL_LINK_TO_DYLIB AND C_CPP_PLAYGROUND_TOOL_LINK_TO_DYLIB)
    set(C_CPP_PLAYGROUND_BUILD_TOOL TRUE)
endif()
if(DEFINED C_CPP_PLAYGROUND_BUILD_TOOL AND C_CPP_PLAYGROUND_BUILD_TOOL)
    if(DEFINED C_CPP_PLAYGROUND_BUILD_DYLIB AND C_CPP_PLAYGROUND_BUILD_DYLIB)
        set(C_CPP_PLAYGROUND_TOOL_LINK_TO_DYLIB TRUE)
    endif()
    if(DEFINED C_CPP_PLAYGROUND_TOOL_LINK_TO_DYLIB AND C_CPP_PLAYGROUND_TOOL_LINK_TO_DYLIB)
        set(C_CPP_PLAYGROUND_BUILD_DYLIB TRUE)
    endif()
else()
    unset(C_CPP_PLAYGROUND_TOOL_LINK_TO_DYLIB)
endif()

add_subdirectory("lib")
add_subdirectory("bin")
